# redis-pvxs-ioc

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.channelfinder-sync.yml  docker-compose.dev.yml  docker-compose.legacy-sidecar.build.yml  docker-compose.legacy-sidecar.yml  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: candidate-image.yml  ci-image.yml  release-image.yml
demo/: config.multi.yaml  config.rpc.yaml  config.yaml
docs/: README.md  building-from-source.md  channelfinder-sync.md  configuration.md  demo.md  design.md  development.md  feature-state-roadmap.md  legacy-sidecar.md  mvp-spec.md  normative-types-roadmap.md  operations.md  pva-networking.md  reccaster.md  redis-only-quickstart.md  releasing.md  rpc-forwarding.md  submodule-remotes.md
docs/adr/: 0001-pva-only-scope.md  0002-pinned-dependency-model.md  0003-mvp-excludes-acf.md  0004-generation-based-reload.md
docs/history/: mvp-spec.md  original-design.md
include/redis_pvxs_ioc/: alarm_publisher.h  app.h  channelfinder.h  config.h  grpc_bridge.h  grpc_query_client.h  rpc_pv.h  runtime.h  util.h  version.h.in
legacy-sidecar/: Dockerfile  build-controls-support.sh  entrypoint.sh
legacy-sidecar/app/: Makefile
legacy-sidecar/app/configure/: CONFIG  CONFIG_SITE  Makefile  RELEASE
legacy-sidecar/app/legacyIocApp/: Makefile
legacy-sidecar/app/legacyIocApp/Db/: Makefile  legacy-demo.db
legacy-sidecar/app/legacyIocApp/src/: Makefile  legacyMain.cpp
legacy-sidecar/iocBoot/: st.cmd
proto/: bpm_query.proto  reflection.proto
scripts/: container-entrypoint.sh  smoke-test.sh
src/: alarm_publisher.cpp  app.cpp  channelfinder.cpp  config.cpp  grpc_bridge.cpp  grpc_query_client.cpp  main.cpp  rpc_pv.cpp  runtime.cpp  util.cpp
tests/: alarm_publisher_tests.cpp  channelfinder_tests.cpp  config_tests.cpp  model_tests.cpp
tools/: channelfinder_sync.cpp
